# opencv_trackbar_test

./: CMakeLists.txt  trackbar.cpp
